--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "celery>=5.4.0",
     "fastapi>=0.115.8",
     "httpx>=0.28.1",
-    "pydantic>=2.10.6",
+    "pydantic[email]>=2.10.6",
     "pydantic-settings>=2.8.0",
     "sqlalchemy>=2.0.38",
     "structlog>=25.1.0",
