--- a/services/rbac-backend/pyproject.toml
+++ b/services/rbac-backend/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "structlog>=25.1.0",
     "uvicorn>=0.34.0",
+    "aiosqlite>=0.21.0",
+    "greenlet>=3.1.1",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [dependency-groups]
